<resources>
    <string name="app_name">Ardu Bluetooth</string>
    <string name="title_leds">Leds</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_power">Lâmpada</string>
    <string name="title_servo">Servo Motor</string>
    <string name="title_settings">Configurações</string>
    <string name="text_leds">Leds</string>
    <string name="text_pinos">Pinos</string>
    <string name="search_devices">Procurar</string>
    <string name="disconnect_device">Disconectar</string>
    <string name="sinal">Sinal</string>

    <string-array name="pins_arduino">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>

    </string-array>

    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="desconectar">Desconectar</string>
    <string name="angulo">Ângulo</string>
    <string name="pino">Pino</string>
    <string name="power">Power</string>
    <string name="angulo_zero">0</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="instrucoes">Instruções para o Módulo Bluetooth HC-06</string>
    <string name="instrucao_leds">Instrução enviada para o Arduino é um número entre 20 e 131.\nOnde o último dígito no número representa o sinal enviado para o led (0=LOW;1=HIGH) e o número restante representa a porta digital onde o componente está ligado.\n
        <b>Exemplo</b>\n
        21 enviado\n
        2 - Porta digital 2\n
        1 - Sinal HIGH\n\n
        100 enviado\n
        10- Porta digital 10\
        0 - Sinal LOW\n
    </string>

    <string name="instrucao_servo">
        Instrução enviada para o servo motor é um número entre 1000 e 13180.\nOnde os 3 últimos dígitos no número representa o ângulo enviado para o servo motor (0 a 180) e o número restante representa a porta digital onde o servo motor está ligado.\n
        <b>Exemplo:</b>\n
        1000 enviado\n
        1 - Porta digital 1\n
        000 - Ângulo 0\n\n
        12090 enviado\n
        12  - Porta digital 12\n
        090 - Ângulo 90\n\n\
        13180 enviado\n
        13  - Porta digital 13\n
        180 - Ângulo 180\n
    </string>
    <string name="leds_lampada">Leds e Lâmpada</string>

</resources>