<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_bluetooth"
        android:icon="@drawable/ic_bluetooth_24dp"
        android:title="@string/title_bluetooth" />
    <item
        android:id="@+id/navigation_leds"
        android:icon="@drawable/led_red"
        android:title="@string/title_leds" />
    <item
        android:id="@id/navigation_power"
        android:icon="@drawable/light_low"
        android:title="@string/title_power" />

    <item
        android:id="@+id/navigation_servo"
        android:icon="@drawable/servo"
        android:title="@string/title_servo" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings" />

</menu>