<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.leds.LedsFragment">

    <ImageButton
        android:id="@+id/ledRed"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_button"
        android:contentDescription="@string/text_leds"
        android:src="@drawable/led_red_low"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchRed" />

    <ImageButton
        android:id="@+id/ledYellow"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/border_button"
        android:contentDescription="@string/text_leds"
        android:src="@drawable/led_yellow_low"
        app:layout_constraintEnd_toStartOf="@+id/ledGreen"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/ledRed"
        app:layout_constraintTop_toTopOf="@+id/ledRed" />

    <ImageButton
        android:id="@+id/ledGreen"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_button"
        android:contentDescription="@string/text_leds"
        android:padding="0dp"
        android:src="@drawable/led_green_low"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@+id/ledYellow" />

    <Spinner
        android:id="@+id/spinnerPinRed"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/switchRed"
        app:layout_constraintStart_toStartOf="@+id/switchRed"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinnerPinYellow"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/switchYellow"
        app:layout_constraintStart_toStartOf="@+id/switchYellow"
        app:layout_constraintTop_toTopOf="@+id/spinnerPinRed" />

    <Spinner
        android:id="@+id/spinnerPinGreen"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/switchGreen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/switchGreen"
        app:layout_constraintTop_toTopOf="@+id/spinnerPinYellow" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_pinos"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="false"
        android:showText="true"
        android:textOff="@string/low"
        android:textOn="@string/high"
        app:layout_constraintEnd_toEndOf="@+id/ledRed"
        app:layout_constraintStart_toStartOf="@+id/ledRed"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPinRed" />

    <Switch
        android:id="@+id/switchYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:clickable="false"
        android:showText="true"
        android:textOff="@string/low"
        android:textOn="@string/high"
        app:layout_constraintEnd_toEndOf="@+id/ledYellow"
        app:layout_constraintStart_toStartOf="@+id/ledYellow"
        app:layout_constraintTop_toTopOf="@+id/switchRed" />

    <Switch
        android:id="@+id/switchGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:clickable="false"
        android:showText="true"
        android:textOff="@string/low"
        android:textOn="@string/high"
        app:layout_constraintEnd_toEndOf="@+id/ledGreen"
        app:layout_constraintStart_toStartOf="@+id/ledGreen"
        app:layout_constraintTop_toTopOf="@+id/switchYellow" />

</androidx.constraintlayout.widget.ConstraintLayout>